--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,16 +2,19 @@ img{
 	border: 0px;
 	float: left;
 	padding-right: 10px;
+	padding-bottom: 2px;
 }
 
 header{
 	background-color: #1A1919;
+	padding:0px;
 }
 
-h1{
+p.h1{
 	color: white;
 	font-family: verdana;
 	text-align: center;
+	font-size: 2em;
 }
 
 p.head{
@@ -34,18 +37,20 @@ a:hover{
 	text-decoration: none;
 }
 
-h2{
+p.h2{
 	color: white;
 	background-color: #336496;
 	text-indent: 10px;
 	font-family: verdana;
+	font-size: 1.5em;
 }
 
-h3{
+p.h3{
 	background-color: #47A3FF;
 	color: white;
 	text-indent: 10px;
 	font-family: verdana;
+	font-size: 1.3em;
 }
 
 p{
